--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ body {
     text-decoration: line-through;
 }
 
-.edit-btn, .edit-btn-ok {
+.edit-btn, .edit-btn2 {
     margin-right: 10px;
     width: 60px;
     height: 60px;
@@ -194,6 +194,6 @@ body {
     transform: rotate(-45deg);
 }
 
-.delete-btn:hover, .edit-btn:hover, .edit-btn-ok:hover  {
+.delete-btn:hover, .edit-btn:hover, .edit-btn2:hover  {
     background-color: rgba(0, 212, 255, .1);
 }
